--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,253 @@
-.App {
+:root {
+  --main-color: rgb(67, 97, 13);
+  --bright-color: rgb(185, 200, 170);
+  --light-color: rgb(230, 236, 225);
+  --dark-color: rgb(76, 84, 67);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
+}
+
+body {
+  color: #262626;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.w-50 {
+  width: 50%;
+}
+
+.fs-7 {
+  font-size: 1rem;
+}
+
+.app {
+  background-color: #fafafa;
+  min-height: 100vh;
+}
+
+.contents {
+  display: flex;
+  align-items: center;
+}
+
+.topBar {
+  position: sticky;
+  top: 0;
+  z-index: 9999;
+  background-color: white;
+  height: 54px;
+  display: flex;
+  align-items: center;
+  object-fit: contain;
+  border-bottom: 1px solid lightgray;
+}
+
+.topBarWrapper {
+  max-width: 975px;
+  margin: 0 auto;
+  width: 100%;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.topBar_logo {
+  max-width: 50%;
+}
+
+.topBarButton {
+  display: flex;
+  column-gap: 15px;
+}
+
+button {
+  font-size: 12px;
+  line-height: 18px;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+.primary__button {
+  background-color: var(--main-color);
+  border-radius: 4px;
+  color: #fff;
+  padding: 5px 9px;
+  font-weight: 600;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text__button {
+  color: #0095f6;
+  font-weight: 600;
+  line-height: 28px;
+  background-color: transparent;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__signUp {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 28px 0;
+  row-gap: 15px;
+}
+
+.bottomBar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.navUl {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  display: flex;
+}
+
+.navLi {
+  width: 25%;
+  padding: 5px 0px 10px 0px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.navActive {
+  background-color: #444;
+}
+
+.navLi a {
+  text-decoration: none;
   color: white;
+  display: block;
+  font-size: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.navLi a:hover {
+  color: var(--bright-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.home {
+  max-width: 860px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.monthlySpending {
+  display: flex;
+  max-width: 1080px;
+  border-bottom: 1px solid lightgray;
+  width: 100%;
+}
+
+.monthly {
+  width: 50%;
+  padding: 0 0 0 10px;
+  line-height: normal;
+}
+
+.textAmount {
+  width: 100%;
+  font-size: 1rem;
+  color:#777;
+  font-weight: 600;
+}
+
+.thisAmount {
+  width: 100%;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.lastAmount {
+  font-size: 1rem;
+  color:#777;
+  font-weight: 600;
+}
+
+.pieGraph {
+  max-width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+}
+
+.pieMonthWrapper {
+  position: relative; 
+  top:50%;
+  display: flex;
+  justify-content: center;
+}
+
+.statWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+}
+
+.expenditureGrid {
+  width: 100%;
+  margin-left: 0 !important;
+}
+
+.eachGrid {
+  margin: 5px;
+  padding: 5px;
+  border: 1px solid var(--bright-color);
+  border-radius: 15px;
+  background-color: var(--light-color);
+  margin-bottom: 10px;
+}
+
+.gridName {
+  font-size: 0.75rem;
+  color:#777;
+  font-weight: 600;
+}
+
+.gridContent {
+  font-size: 1.25rem;
+  font-weight: 700;
+  color: var(--dark-color);
+}
+
+.categorized {
+  width: 100%;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+}
+
+.bank {
+  max-width: 860px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.financeWrapper {
+  display: flex;
+  max-width: 1080px;
+  border-bottom: 1px solid lightgray;
+  width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+
+  .pieGraph {
+    height: 400px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
 }
